--- a/OnlineTourism.Web/Views/Package/Edit.cshtml
+++ b/OnlineTourism.Web/Views/Package/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Edit Package</h2>
 
-@using (Html.BeginForm("Update", "Package", FormMethod.Post))
+@using (Html.BeginForm("Edit", "Package", FormMethod.Post))
 {
     @Html.HiddenFor(Model => Model.PackageId)
     <table cellpadding="10">
